--- a/src/pages/App.css
+++ b/src/pages/App.css
@@ -3,18 +3,18 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: 0.3s;
+  transition: 0.2s;
   color: var(--white);
-  background-color: var(--black);
+  background-color: var(--dark);
 
   --color: var(--white);
   --error-color: var(--red);
   --background-color: var(--dark);
-  --hover-background: var(--dark);
-  --transparent-1: var(--white-transparent-1);
-  --transparent-2: var(--white-transparent-2);
-  --transparent-3: var(--white-transparent-3);
-  --general-shadow: 0px 0px 60px 1px var(--transparent-3);
+  --hover-background: var(--black-transparent-1);
+  --transparent-1: var(--black-transparent-1);
+  --transparent-2: var(--black-transparent-2);
+  --transparent-3: var(--black-transparent-3);
+  --general-shadow: 0px 0px 60px 1px var(--black);
 }
 
 .App.light {
@@ -23,10 +23,10 @@
 
   --color: var(--black);
   --background-color: var(--white);
-  --hover-background: var(--light);
-  --transparent-1: var(--black-transparent-1);
-  --transparent-2: var(--black-transparent-2);
-  --transparent-3: var(--black-transparent-3);
+  --hover-background: var(--black-transparent-3);
+  --transparent-1: var(--white-transparent-1);
+  --transparent-2: var(--white-transparent-2);
+  --transparent-3: var(--white-transparent-3);
   --general-shadow: 0px 0px 60px 1px var(--transparent-3);
 }
 
@@ -39,6 +39,7 @@
 
 .App-body__page-wrapper {
   border-radius: 2.2rem;
+  border: 0.1em solid var(--brand-color);
   -webkit-box-shadow: var(--general-shadow);
   -moz-box-shadow: var(--general-shadow);
   box-shadow: var(--general-shadow);
