--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ html {
   --light-dark: #252525;
   --white: #fff;
   --light: #e6e6e6;
-  --dark-light: #c4c4c4;
+  --dark-light: #bbbbbb;
   --gray: #adadad;
   --red: #ff5959;
   --orange: #ffc917;
