--- a/src/pages/Wallets/index.css
+++ b/src/pages/Wallets/index.css
@@ -2,30 +2,24 @@
   padding: 2rem;
 }
 
-.wallet__item {
+.wallet-item {
   margin: 1.5em 0;
   padding: 1em;
   border-radius: 1em;
-  box-shadow: inset 0px 0px 0.5rem var(--transparent-3);
+  box-shadow: inset var(--general-shadow);
 }
 
-.wallet__address-wrapper {
-  margin: 0.5rem;
+.wallet-item__header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.wallet__balance-wrapper {
-  margin: 0.5rem;
+.wallet-item__ticker {
+  font-size: 2em;
 }
 
-.wallet__address-wrapper b,
-.wallet__balance-wrapper b {
-  font-size: 1.1em;
-}
-
-.wallet__address {
-  /*  */
-}
-
-.wallet__balance {
-  /*  */
+.wallet-item__balance-wrapper {
+  display: flex;
+  flex-direction: column;
 }
