Renaming. Added a dropdown component. Small design changes. Logout functional.

--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,7 @@ html {
   --black: #000;
   --dark: #141414;
   --light-dark: #252525;
+  --dark-gray: #3d3d3d;
   --white: #fff;
   --light: #e6e6e6;
   --dark-light: #bbbbbb;
