--- a/src/pages/Transfer/index.css
+++ b/src/pages/Transfer/index.css
@@ -1,16 +1,16 @@
-.send {
+.transfer {
   height: inherit;
   padding: 2rem;
 }
 
-.send__form-wrapper {
+.transfer__form-wrapper {
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 
-.send__input-wrapper {
+.transfer__input-wrapper {
   display: flex;
   flex-direction: column;
 }
