--- a/src/pages/Wallets/index.css
+++ b/src/pages/Wallets/index.css
@@ -16,16 +16,20 @@
   justify-content: space-between;
 }
 
+.wallets__not-wallet {
+  font-size: 1.6em;
+}
+
 .wallet-item__header::after {
   content: '';
   position: absolute;
-  bottom: -0.7em;
+  bottom: -0.85em;
   left: 0;
   height: 2px;
   width: 100%;
-  border-radius: 1em;
-  opacity: 0.3;
-  background: linear-gradient(to right, var(--color), transparent);
+  border-radius: 2em;
+  opacity: 0.12;
+  background: var(--color);
 }
 
 .wallet-item__ticker {
@@ -66,9 +70,9 @@
   left: 50%;
   top: -120%;
   transform: translateX(-50%);
-  padding: 0.3em 0.6em;
+  padding: 0.5em 1em;
   font-size: 0.9em;
-  border-radius: 0.7em;
+  border-radius: 0.5em;
   box-shadow: var(--general-shadow);
   background-color: var(--background-color);
   color: var(--color);
