--- a/src/pages/Transfer/index.css
+++ b/src/pages/Transfer/index.css
@@ -5,12 +5,25 @@
 
 .transfer__form-wrapper {
   height: 100%;
+  margin-top: 1em;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
 }
 
 .transfer__input-wrapper {
   display: flex;
   flex-direction: column;
+}
+
+.dropdown-item {
+  /*  */
+}
+
+.dropdown-item__ticker {
+  margin-right: 5%;
+  font-size: 1.1em;
+}
+
+.dropdown-item__address {
+  opacity: 0.6;
 }
