--- a/src/index.css
+++ b/src/index.css
@@ -23,17 +23,17 @@
 
 html {
   --black: #000;
-  --dark: #141414;
+  --dark: #181818;
   --light-dark: #252525;
   --dark-gray: #3d3d3d;
   --white: #fff;
   --light: #e6e6e6;
   --dark-light: #bbbbbb;
   --gray: #adadad;
-  --red: #ff5959;
-  --orange: #ffc917;
+  --red: #fd6363;
+  --orange: #fd7e14;
   --blue: #0073df;
-  --pink: #fc9cfc;
+  --pink: #ec4d9d;
   --brand-color: var(--blue);
 
   font-family: 'Source Code Pro', sans-serif;
