--- a/src/pages/Settings/index.sass
+++ b/src/pages/Settings/index.sass
@@ -9,3 +9,19 @@
   width: 1.2em
   height: 1.2em
   margin-right: .4em
+
+.warning
+  margin: 0 0 1em
+  padding: 1rem
+  border-radius: 1em
+  border: 2px solid #faa710
+  background-color: #ffd4002b
+
+.mnemonic-phrase-field
+  width: 100%
+  min-height: 5.5em
+  padding: 1rem
+  font-size: 1.5rem
+  border-radius: 1em
+  background-color: var(--notice-color)
+  color: inherit
