--- a/src/components/Button/index.sass
+++ b/src/components/Button/index.sass
@@ -11,7 +11,7 @@
   letter-spacing: 0.08rem
   border: var(--border)
   font-weight: 700
-  background-color: var(--background-color)
+  background-color: var(--notice-color)
   color: var(--color)
   transition: 0.2s
 
@@ -48,3 +48,6 @@
   66%
     content: '...'
   
+.button.small
+  padding: .8em 1.6em
+  font-size: .85em
