--- a/src/pages/Settings/index.sass
+++ b/src/pages/Settings/index.sass
@@ -8,20 +8,25 @@
   display: inline-block
   width: 1.2em
   height: 1.2em
-  margin-right: .4em
+  margin-right: .6em
+
+.settings__section
+  margin-top: 2rem
 
 .warning
   margin: 0 0 1em
   padding: 1rem
+  font-size: 1.1em
   border-radius: 1em
   border: 2px solid #faa710
   background-color: #ffd4002b
 
-.mnemonic-phrase-field
+.new-mnemonic-phrase
   width: 100%
   min-height: 5.5em
-  padding: 1rem
-  font-size: 1.5rem
+  padding: 1.2rem
+  font-size: 1.4rem
   border-radius: 1em
+  border: 1px solid var(--brand-color)
   background-color: var(--notice-color)
   color: inherit
