--- a/src/pages/Wallets/index.sass
+++ b/src/pages/Wallets/index.sass
@@ -85,3 +85,16 @@
   display: flex
   align-items: center
   justify-content: space-between
+
+.wallet-item__balance-wrapper
+  display: flex
+  align-items: center
+
+.wallet-item__crypto
+
+.wallet-item__update-balance
+  width: 1.6rem
+  height: 1.6rem
+  margin-left: .4em
+  border: none
+  background-color: transparent
