--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,16 @@
     U+FEFF, U+FFFD;
 }
 
+/* latin */
+@font-face {
+  font-family: 'Rubik';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/rubik/v14/iJWZBXyIfDnIV5PNhY1KTN7Z-Yh-B4iFV0U1.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
 html {
   --black: #000;
   --dark: #181818;
@@ -20,10 +30,10 @@ html {
   --light: #e6e6e6;
   --gray: #adadad;
   --red: #fd6363;
-  --orange: #17e968;
+  --orange: #e0d647;
   --blue: #004bd6;
 
-  font-family: 'Source Code Pro', sans-serif;
+  font-family: 'Rubik', sans-serif;
   box-sizing: border-box;
 }
 
